make grid responsive to 1 column on mobile, fix layout issues, minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a:link {
 }
 
 .logo {
-  padding-bottom: 3em;
+  padding-bottom: 1em;
 }
 
 .about p {
@@ -112,36 +112,34 @@ footer {
 }
 
 .wrapper {
-  width: 95%;
+  width: 90%;
   margin: 1.5em auto;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 300px 300px;
-  grid-gap: 10px;
+  grid-template-columns: 2fr 1fr;
+  gap: 10px;
 }
 
 .box {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.2em;
 }
 
-@media (min-width: 770px) {
-}
-
-@media only screen and (min-width: 400px) {
-}
-
-@media only screen and (min-width: 400px) {
-}
-
-@media only screen and (min-width: 700px) {
-}
-
-@media only screen and (min-width: 900px) {
-}
-
-@media only screen and (min-width: 1100px) {
-}
-
-@media only screen and (min-width: 1280px) {
+@media only screen and (max-width: 600px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    margin: 0 auto 0 auto;
+  }
+  .box {
+    font-size: 1em;
+  }
+  /* Make all menu links full width */
+  ul li,
+  li a {
+    width: 90%;
+  }
 }
